test/TestSuite/Syntax/Errors/resbooking_scenario.tjp
project test "Test" "1.0" 2007-08-19 +2m {
  scenario s1 "S1" {
    scenario s2 "S2"
  }
}

resource tux "Tux"

task t "T" {
  effort 1w
  allocate tux
}

supplement resource tux {
# MARK: error 16 resbooking_scenario
	booking t 2007-08-25-10:00 +2h
}
